--- a/web/template/header.html
+++ b/web/template/header.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <title>Isospin</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script defer src="header.js"></script>
 </head>
 
 <body>
+    <div id="grid"></div>
+    <div id="tabs"> insert navbar here :)</div>
     <div id="header">
         <div id="post-it">{{POST-IT-L}}</div>
         <div id="post-it">{{POST-IT-R}}</div>
