--- a/web/static/text.css
+++ b/web/static/text.css
@@ -542,13 +542,13 @@ body::after {
     content: "";
 }
 
-body>*:first-child {
+/* body>*:first-child {
     margin-top: 0 !important;
 }
 
 body>*:last-child {
     margin-bottom: 0 !important;
-}
+} */
 
 .markdown-bodya:not([href]) {
     color: inherit;
