--- a/web/template/header.html
+++ b/web/template/header.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <title>Isospin</title>
     <link rel="stylesheet" href="styles.css">
-    <script defer src="header.js"></script>
+    <script defer src="index.js"></script>
 </head>
 
 <body>
     <div id="grid"></div>
-    <div id="tabs"> insert navbar here :)</div>
+    <div id="tabs">
+        <div id="tab">home</div>
+        <div id="tab">blog</div>
+    </div>
     <div id="header">
         <div id="post-it">{{POST-IT-L}}</div>
         <div id="post-it">{{POST-IT-R}}</div>
