--- a/web/template/blog.html
+++ b/web/template/blog.html
@@ -1,13 +1,15 @@
 <div id="content">
-    <div id="frame" class="blue"></div>
+    <div id="frame" class="green"></div>
     <div class="flex">
         <div id="title-bar">
             <img id="window-button" src="assets/window.svg" />
             <i><span style="color:var(--gb-blue)">Viewing</span><span style="color:var(--gb-green)"> - </span><span
                     style="color:var(--gb-yellow)">web</span><span style="color:var(--gb-green)">/</span><span
                     style="color:var(--gb-yellow)">template</span><span style="color:var(--gb-green)">/</span><span
-                    style="color:var(--gb-yellow)">home</span><span style="color:var(--gb-red)">.html</span></i>
+                    style="color:var(--gb-yellow)">blog</span><span style="color:var(--gb-red)">.html</span></i>
         </div>
+        <div style="position: relative">pretend theres a blog here thank youuuuu</div>
+
         {{CONTENT}}
     </div>
 </div>
