--- a/web/static/styles.css
+++ b/web/static/styles.css
@@ -158,29 +158,43 @@ p:nth-child(5) {
   overflow: visible;
   left: 0px;
   position: relative;
-  left: 12.5vw;
-  width: 75vw;
+  left: 7.5vw;
+  width: 85vw;
   text-align: center;
 }
 #content #frame {
-  border: 5px solid var(--gb-f-blue);
   border-radius: 10px;
   position: absolute;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: var(--gb-blue);
   height: 100%;
 }
-#content #title {
+#content #frame.blue {
+  border: 5px solid var(--gb-f-blue);
+  background-color: var(--gb-blue);
+}
+#content #frame.green {
+  border: 5px solid var(--gb-f-green);
+  background-color: var(--gb-green);
+}
+#content #title-bar {
   height: 20px;
   width: 100%;
+  position: relative;
   border: 5px solid var(--gb-bg0-h);
+  background-color: var(--gb-bg0);
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
-  background-color: var(--gb-bg0);
+  text-align: center;
   font-family: "FixedSys";
-  position: relative;
+}
+#content #title-bar #window-button {
+  width: 60px;
+  height: 20px;
+  position: absolute;
+  right: 0;
+  top: 0;
 }
 #content .flex {
   justify-content: center;
@@ -201,20 +215,23 @@ p:nth-child(5) {
   display: inline-block;
   box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.1725490196);
   position: static;
-  height: 25.5vw;
-  border-radius: 5px;
-  transition: transform 1s, filter 0.4s;
+  height: 21.25vw;
+  transition: transform 1.5s, filter 0.4s;
 }
 #content .desc {
-  overflow-y: scroll;
   text-align: left;
-  width: 38.25vw;
+  width: 59.5vw;
   margin-left: 8px;
 }
-#content .icon {
-  width: 25.5vw;
+#content .desc .markdown-body {
+  height: calc(21.25vw - 30px - 32px);
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
 }
-#content .active,
+#content .icon {
+  border-radius: 10px;
+  width: 21.25vw;
+}
 #content .wrapper {
   width: 100%;
   margin-left: 5px;
@@ -226,7 +243,7 @@ p:nth-child(5) {
   transform: scaleX(0);
 }
 #content .wrapper .icon {
-  transform: translateX(75%);
+  transform: translateX(140%);
 }
 #content .active .desc {
   visibility: visible;
@@ -240,7 +257,7 @@ p:nth-child(5) {
   z-index: 9001;
   position: fixed;
   font-size: 4vh;
-  height: calc(1em + 10px);
+  height: 1.2em;
   width: 100vw;
   left: 0;
   top: 0;
@@ -252,10 +269,15 @@ p:nth-child(5) {
   justify-content: center;
 }
 #tabs #tab {
+  display: inline-block;
+  height: calc(1.2em + 5px);
   height: 100%;
-  transition: 0.6s;
+  transition: 0.3s;
   text-align: center;
   font-size: xx-large;
+}
+#tabs img {
+  height: 1.2em;
 }
 
 #tab:nth-child(1) {
@@ -274,4 +296,13 @@ p:nth-child(5) {
 
 #tab:nth-child(2):hover {
   background-color: var(--gb-f-green);
+}
+
+#tab:nth-child(3) {
+  color: transparent;
+  width: 1.2em;
+}
+
+#tab:nth-child(3):hover {
+  background-color: var(--gb-fg0);
 }/*# sourceMappingURL=styles.css.map */
