--- a/web/static/styles.css
+++ b/web/static/styles.css
@@ -232,17 +232,17 @@ p:nth-child(5) {
   border-radius: 10px;
   width: 21.25vw;
 }
-#content .wrapper {
+#content .proj-wrapper {
   width: 100%;
   margin-left: 5px;
   margin-right: 5px;
 }
-#content .wrapper .desc {
+#content .proj-wrapper .desc {
   visibility: hidden;
   border: none;
   transform: scaleX(0);
 }
-#content .wrapper .icon {
+#content .proj-wrapper .icon {
   transform: translateX(140%);
 }
 #content .active .desc {
@@ -305,4 +305,26 @@ p:nth-child(5) {
 
 #tab:nth-child(3):hover {
   background-color: var(--gb-fg0);
+}
+
+#preview-wrapper {
+  margin-left: 5px;
+  margin-right: 5px;
+  width: 100%;
+  align-items: center;
+}
+#preview-wrapper #preview {
+  display: inline-block;
+  position: relative;
+  margin: 7.5px;
+  width: calc(50% - 60px);
+  height: 20vh;
+  padding: 16px 16px;
+  background-color: var(--gb-b-green);
+  text-align: left;
+  border-radius: 5px;
+  border: 5px solid var(--gb-f-green);
+}
+#preview-wrapper #preview h1 {
+  margin: 0;
 }/*# sourceMappingURL=styles.css.map */
