--- a/web/static/styles.css
+++ b/web/static/styles.css
@@ -22,7 +22,7 @@ body {
 }
 
 #header {
-  top: 8vh;
+  top: 4vh;
   transform: translate(-8px, -8px);
   width: 100vw;
   height: 65vh;
@@ -33,7 +33,7 @@ body {
   position: relative;
   width: calc(max(40vw, 300px) * 0.3);
   height: calc(max(40vw, 300px) * 0.3);
-  top: calc(65vh - max(40vw, 300px) * 0.3 + 10px - 8vh);
+  top: calc(65vh - max(40vw, 300px) * 0.3 + 10px - 4vh);
   left: calc(50vw - max(40vw, 300px) * 0.3 / 2);
 }
 
@@ -312,19 +312,43 @@ p:nth-child(5) {
   margin-right: 5px;
   width: 100%;
   align-items: center;
+  display: flex;
 }
 #preview-wrapper #preview {
+  flex: auto;
   display: inline-block;
   position: relative;
   margin: 7.5px;
-  width: calc(50% - 60px);
-  height: 20vh;
-  padding: 16px 16px;
+  width: calc(50% - 80px);
+  height: 100%;
+  padding: 21px 16px 16px 16px;
+  border-radius: 10px;
+  border: 5px solid var(--gb-f-green);
   background-color: var(--gb-b-green);
   text-align: left;
-  border-radius: 5px;
-  border: 5px solid var(--gb-f-green);
 }
-#preview-wrapper #preview h1 {
+#preview-wrapper #preview #t {
+  position: absolute;
+  width: 100%;
+  padding-left: 5px;
+  transform: translateY(-21px) translateX(-16px);
+  color: var(--gb-f-green);
+  font-style: italic;
+  font-size: small;
+  border-bottom: 5px double var(--gb-f-green);
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+#preview-wrapper #preview #h {
+  color: var(--gb-bg1);
+  display: static;
+  font-size: x-large;
   margin: 0;
+}
+#preview-wrapper #preview #p {
+  margin-left: 16px;
+  color: var(--gb-bg1);
+  display: static;
+  font-size: medium;
 }/*# sourceMappingURL=styles.css.map */
