--- a/web/template/header.html
+++ b/web/template/header.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Isospin</title>
-    <link rel="stylesheet" href="styles.css">
-    <script defer src="index.js"></script>
+    <link rel="stylesheet" href="/styles.css">
+    <script defer src="/index.js"></script>
 </head>
 
 <body style="background-color: rgb(118, 151, 212)">
