--- a/web/static/styles.scss
+++ b/web/static/styles.scss
@@ -378,6 +378,7 @@ $tab-info: (
 
     #preview {
         flex: auto;
+        text-decoration: none;
 
         display: inline-block;
         position: relative;
