--- a/web/template/article.html
+++ b/web/template/article.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Isospin</title>
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="/styles/styles.css">
     <script defer src="/index.js"></script>
     {{HEAD}}
 </head>
