--- a/web/static/styles/styles.scss
+++ b/web/static/styles/styles.scss
@@ -1,5 +1,5 @@
 @import "text.css";
-@import "gruvbox-color.css";
+@import "config.css";
 
 // font stuff (noway)
 @font-face {
@@ -19,37 +19,37 @@ body {
     left: 0;
     width: 100%;
     height: 200%;
-    background-color: #7697d4;
+    background-color: var(--color-bg);
     background-image:
         linear-gradient(0deg, transparent 9%,
-            rgba(255, 255, 255, .2) 10%, rgba(255, 255, 255, .2) 12%, transparent 13%, transparent 29%,
-            rgba(255, 255, 255, .1) 30%, rgba(255, 255, 255, .1) 31%, transparent 32%, transparent 49%,
-            rgba(255, 255, 255, .1) 50%, rgba(255, 255, 255, .1) 51%, transparent 52%, transparent 69%,
-            rgba(255, 255, 255, .1) 70%, rgba(255, 255, 255, .1) 71%, transparent 72%, transparent 89%,
-            rgba(255, 255, 255, .1) 90%, rgba(255, 255, 255, .1) 91%, transparent 92%, transparent),
+            var(--color-grid-2) 10%, var(--color-grid-2) 12%, transparent 13%, transparent 29%,
+            var(--color-grid-1) 30%, var(--color-grid-1) 31%, transparent 32%, transparent 49%,
+            var(--color-grid-1) 50%, var(--color-grid-1) 51%, transparent 52%, transparent 69%,
+            var(--color-grid-1) 70%, var(--color-grid-1) 71%, transparent 72%, transparent 89%,
+            var(--color-grid-1) 90%, var(--color-grid-1) 91%, transparent 92%, transparent),
         linear-gradient(90deg, transparent 9%,
-            rgba(255, 255, 255, .2) 10%, rgba(255, 255, 255, .2) 12%, transparent 13%, transparent 29%,
-            rgba(255, 255, 255, .1) 30%, rgba(255, 255, 255, .1) 31%, transparent 32%, transparent 49%,
-            rgba(255, 255, 255, .1) 50%, rgba(255, 255, 255, .1) 51%, transparent 52%, transparent 69%,
-            rgba(255, 255, 255, .1) 70%, rgba(255, 255, 255, .1) 71%, transparent 72%, transparent 89%,
-            rgba(255, 255, 255, .1) 90%, rgba(255, 255, 255, .1) 91%, transparent 92%, transparent);
+            var(--color-grid-2) 10%, var(--color-grid-2) 12%, transparent 13%, transparent 29%,
+            var(--color-grid-1) 30%, var(--color-grid-1) 31%, transparent 32%, transparent 49%,
+            var(--color-grid-1) 50%, var(--color-grid-1) 51%, transparent 52%, transparent 69%,
+            var(--color-grid-1) 70%, var(--color-grid-1) 71%, transparent 72%, transparent 89%,
+            var(--color-grid-1) 90%, var(--color-grid-1) 91%, transparent 92%, transparent);
     height: 100%;
     background-size: 50px 50px;
 }
 
 // size variables i reference later
-$lcd-width: max(40vw, 300px);
+$lcd-width: max(35vw, 300px);
 $lcd-height: calc($lcd-width * 0.4825);
 $unit-width: calc($lcd-width / 114);
 
-$header-height: 65vh;
+$header-height: 50vh;
 
 #header {
     top: 4vh;
     transform: translate(-8px, -8px);
     width: 100vw;
     height: $header-height;
-    z-index: 0;
+    z-index: 0; 
     position: relative;
     // animation: scanlines 1s steps($scan-fps) infinite;
 
@@ -185,13 +185,13 @@ $border-radius: 10px;
 
     #frame {
         &.blue {
-            border: 5px solid var(--gb-f-blue);
-            background-color: var(--gb-blue);
+            border: 5px solid var(--color-frame-blue);
+            background-color: var(--color-inner-blue);
         }
-
+        
         &.green {
-            border: 5px solid var(--gb-f-green);
-            background-color: var(--gb-green);
+            border: 5px solid var(--color-frame-green);
+            background-color: var(--color-inner-green);
         }
 
         border-radius: $border-radius;
