--- a/web/static/styles/text.css
+++ b/web/static/styles/text.css
@@ -1,4 +1,3 @@
-@import "gruvbox-color.css";
 
 .markdown-body {
     padding: 16px 32px 16px 32px;
@@ -50,7 +49,7 @@
     -webkit-text-size-adjust: 100%;
     margin: 0;
     color: #c9d1d9;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
+    font-family: "Noto Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
     font-size: 16px;
     line-height: 1.5;
     word-wrap: break-word;
@@ -193,6 +192,7 @@
 .markdown-body[type=reset],
 .markdown-body[type=submit] {
     -webkit-appearance: button;
+    appearance: button;
 }
 
 .markdown-body[type=button]::-moz-focus-inner,
@@ -221,6 +221,7 @@
 
 .markdown-body[type=search] {
     -webkit-appearance: textfield;
+    appearance: textfield;
     outline-offset: -2px;
 }
 
